unpackaged/main/default/objects/ETSALES_Tender__c/ETSALES_Tender__c.object-meta.xml
<CustomObject>
    <description>Custom Object Created for storing ETSALES Tenders.</description>
    <label>Tender</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Tender Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tenders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>