unpackaged/main/default/objects/ETSALES_Tender__c/fields/Bidder_Copy_of_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Bidder_Copy_of_Certifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bidder Copy of Certifications</label>
    <type>Checkbox</type>
</CustomField>