unpackaged/main/default/objects/ETSALES_Tender__c/fields/Bidder_HSE_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Bidder_HSE_Certifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bidder HSE Certifications</label>
    <type>Checkbox</type>
</CustomField>