unpackaged/main/default/objects/ETSALES_Tender__c/fields/ETP_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETP_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>