unpackaged/main/default/objects/ETSALES_Tender__c/fields/ETSALES_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tender Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tenders</relationshipName>
    <type>Lookup</type>
</CustomField>