unpackaged/main/default/objects/ETSALES_Tender__c/fields/ETSALES_Bid_Bond__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Bid_Bond__c</fullName>
    <label>Bid Bond?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>