unpackaged/main/default/objects/ETSALES_Tender__c/fields/ETSALES_Bid_Bond_User__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Bid_Bond_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bid Bond</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tenders1</relationshipName>
    <type>Lookup</type>
</CustomField>