unpackaged/main/default/objects/ETSALES_Tender__c/fields/ETSALES_Bid_Details__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Bid_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bid Details</label>
    <type>TextArea</type>
</CustomField>