unpackaged/main/default/objects/ETSALES_Tender__c/fields/ETSALES_Customer__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tenders</relationshipLabel>
    <relationshipName>Tenders</relationshipName>
    <type>Lookup</type>
</CustomField>