unpackaged/main/default/objects/ETSALES_Tender__c/fields/ETSALES_Date__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>