unpackaged/main/default/objects/ETSALES_Tender__c/fields/ETSALES_Statement_of_Non_Collusion__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Statement_of_Non_Collusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Statement of Non-Collusion</label>
    <type>Checkbox</type>
</CustomField>