unpackaged/main/default/objects/ETSALES_Tender__c/fields/ETSALES_Tender_Deadline__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Tender_Deadline__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tender Deadline</label>
    <type>Date</type>
</CustomField>