unpackaged/main/default/objects/ETSALES_Tender__c/fields/ETSALES_Tender_Type__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Tender_Type__c</fullName>
    <label>Tender Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Limited</fullName>
                <label>Pre-qualified</label>
            </value>
            <value>
                <fullName>Enquiry</fullName>
                <isActive>false</isActive>
                <label>Enquiry</label>
            </value>
            <value>
                <fullName>Tender</fullName>
                <isActive>false</isActive>
                <label>Tender</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>