unpackaged/main/default/objects/ETSALES_Tender__c/fields/ETSALES_Trade_License__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Trade_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade License</label>
    <type>Checkbox</type>
</CustomField>