unpackaged/main/default/objects/ETSALES_Tender__c/fields/ETSALES_Zone__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Zone__c</fullName>
    <formula>IF( ETSALES_Days_Remaining__c &gt;= 50, IMAGE(&quot;/servlet/servlet.ImageServer?id=0150C000000BfYi&amp;oid=00D0C0000000ub6&amp;lastMod=1584357974000&quot;, &#39;&#39; , 50, 200) , IF( AND((ETSALES_Days_Remaining__c &lt; 50), (ETSALES_Days_Remaining__c &gt; 20)) , IMAGE(&quot;/servlet/servlet.ImageServer?id=0150C000000BfYd&amp;oid=00D0C0000000ub6&amp;lastMod=1584357949000&quot;, &#39;&#39; , 50, 200), IMAGE(&quot;/servlet/servlet.ImageServer?id=0150C000000BfYY&amp;oid=00D0C0000000ub6&amp;lastMod=1584357911000&quot;, &#39;&#39; , 50, 200) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zone</label>
    <type>Text</type>
</CustomField>