unpackaged/main/default/objects/ETSALES_Tender__c/fields/GL_Location_Lookup__c.field-meta.xml
<CustomField>
    <fullName>GL_Location_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Location</label>
    <referenceTo>ETSALES_Location__c</referenceTo>
    <relationshipLabel>Tenders</relationshipLabel>
    <relationshipName>Tenders</relationshipName>
    <type>Lookup</type>
</CustomField>