unpackaged/main/default/objects/ETSALES_Tender__c/fields/GL_Region__c.field-meta.xml
<CustomField>
    <fullName>GL_Region__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>