unpackaged/main/default/objects/ETSALES_Tender__c/fields/GL_Zone_Lookup__c.field-meta.xml
<CustomField>
    <fullName>GL_Zone_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Zone</label>
    <referenceTo>GL_Zone__c</referenceTo>
    <relationshipLabel>Tenders</relationshipLabel>
    <relationshipName>Tenders</relationshipName>
    <type>Lookup</type>
</CustomField>