unpackaged/main/default/objects/ETSALES_Tender__c/fields/GL_Zone_Text__c.field-meta.xml
<CustomField>
    <fullName>GL_Zone_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Zone Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>