unpackaged/main/default/objects/ETSALES_Tender__c/fields/Operation_Approach_Plan__c.field-meta.xml
<CustomField>
    <fullName>Operation_Approach_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Operation Approach Plan</label>
    <type>Checkbox</type>
</CustomField>