unpackaged/main/default/objects/ETSALES_Tender__c/fields/proposed_recuruitemnt_plan__c.field-meta.xml
<CustomField>
    <fullName>proposed_recuruitemnt_plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>proposed recuruitemnt plan</label>
    <type>Checkbox</type>
</CustomField>