unpackaged/main/default/objects/ETSALES_Tender__c/fields/Tender_submission_letter__c.field-meta.xml
<CustomField>
    <fullName>Tender_submission_letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tender submission letter</label>
    <type>Checkbox</type>
</CustomField>