unpackaged/main/default/objects/ETSALES_Tender__c/validationRules/ET_Tender_Date_Fields_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ET_Tender_Date_Fields_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK(ETSALES_Date_Received__c) &amp;&amp; ETSALES_Date_Received__c &lt; TODAY(),TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>ETSALES_Date_Received__c</errorDisplayField>
    <errorMessage>Date Received  should not be less than Today</errorMessage>
</ValidationRule>