unpackaged/main/default/objects/ETSALES_Tender__c/validationRules/ET_Tender_DeadLineDate_Fields_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ET_Tender_DeadLineDate_Fields_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISBLANK(ETSALES_Tender_Deadline__c) &amp;&amp; ETSALES_Tender_Deadline__c &lt;  ETSALES_Date_Received__c,TRUE,FALSE)</errorConditionFormula>
    <errorDisplayField>ETSALES_Tender_Deadline__c</errorDisplayField>
    <errorMessage>Deadline date should not be less than Received Date</errorMessage>
</ValidationRule>