unpackaged/main/default/objects/ETSALES_Tender__c/validationRules/ET_Tender_Negative_Value_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ET_Tender_Negative_Value_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ETSALES_Bid_Bond_Amount__c&lt; 0 ||  ETP_Amount__c &lt;0, TRUE, FALSE
)</errorConditionFormula>
    <errorMessage>Bid Bond Amount and Amount can not be negative</errorMessage>
</ValidationRule>