unpackaged/main/default/objects/ETSALES_Tender__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETSALES_Tender_Deadline__c</columns>
    <columns>ETSALES_Customer__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>